Changed the system schema

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://yuvraj_db:yuvraj2002@cluster0.rn15qfs.mongodb.net/visitors_book?appName=Cluster0
+MONGO_URI=mongodb+srv://yuvraj_db:Yuvraj2025*@cluster0.jhn6ipj.mongodb.net/visitors_book?appName=Cluster0
