--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "@shopify/react-native-skia": "2.2.12",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
