--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "@shopify/react-native-skia": "2.2.12",
     "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.27",
@@ -44,6 +45,7 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.553.0",
+    "multer": "^2.0.2",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -60,6 +62,7 @@
     "undefined": "\\"
   },
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "@types/react": "~19.1.0",
     "@types/react-redux": "^7.1.34",
     "eslint": "^9.25.0",
