--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,8 +2,13 @@
   "name": "@repo/types",
   "version": "0.0.0",
   "private": true,
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch"
+  },
   "exports": {
-    ".": "./src/index.ts",
-    "./*": "./src/*.ts"
+    ".": "./dist/index.js"
   }
 }
