--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -20,5 +20,6 @@
     "globals": "^16.5.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.49.0"
-  }
+  },
+  "packageManager": "pnpm@9.15.1"
 }
