--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "packageManager": "pnpm@9.15.1",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
