Updated vite.config.ts: Added an alias mapping @repo/types to ../../packages/types/src. This tells Vite to compile the TS files directly.

--- a/apps/Web/tsconfig.app.json
+++ b/apps/Web/tsconfig.app.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@repo/types": ["../../packages/types/src/index.ts"]
     },
 
     /* Bundler mode */
