--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",           // Changed from CommonJS
+    "moduleResolution": "bundler", // Added
     "declaration": true,
     "outDir": "dist",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true       // Added for better compatibility
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
